--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,45 @@
-body {
-  padding: 50px;
+html, body
+{
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  overflow:hidden;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.chat {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: 100%;
+}
+
+
+.message-container {
+  overflow-y: auto;
+  flex: 1;
+  border: 1px solid;
+  margin: 20px 20px 0 20px;
+}
+
+.message-control {
+  display: flex;
+  margin: 0 20px 20px 20px;
+  height: 75px;
+}
+
+.message-input {
+  flex: 1
+}
+
+.send-btn {
+  width: 100px;
+}
+
+.format-msg {
+  color: #ccc;
 }
